[project]
name = "redesigned-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.0",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.4",
    "langgraph>=0.5.3",
    "fastmcp>=2.10.5",
    "langchain-mcp-adapters>=0.1.9",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
]
